client: don't hang when MDS sessions are evicted

Currently, a filesystem client hangs if a request is made after it's
eviction. Prevent the client from hanging and allow a manual unmount
in such cases.

Fixes: http://tracker.ceph.com/issues/10915
Signed-off-by: Rishabh Dave <ridave@redhat.com>
(cherry picked from commit 0f56c7e8e5f45112c5924797a7798b3c926d8492)